--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "📱 Japan – Steph and Sarah's eSIM Comparison (2025)",
-  "short_name": "eSIM",
+  "name": "🚆 Japan – Steph and Sarah's Travel Guide 2025",
+  "short_name": "Transport Guide",
   "start_url": "/SP-2025-eSIM/",
   "scope": "/SP-2025-eSIM/",
   "display": "standalone",
@@ -8,15 +8,15 @@
   "theme_color": "#0b3d91",
   "icons": [
     {
-      "src": "/SP-2025-eSIM/assets/icons/icon-192x192.png",
+      "src": "/SP-2025-transport/SP-2025-eSIM/assets/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/SP-2025-eSIM/assets/icons/icon-512x512.png",
+      "src": "/SP-2025-transport/SP-2025-eSIM/assets/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ]
+  ],
+  "id": "/SP-2025-eSIM/"
 }
